--- a/src/main/resources/templates/developers.html
+++ b/src/main/resources/templates/developers.html
@@ -9,9 +9,11 @@
 <body>
 	<div class="container">
       <div class="page-header" id="banner">
+      <h1>Developers Management</h1>
+      </div>
         <div class="row">
           <div class="col-lg-8 col-md-7 col-sm-6">
-            <h1>Developers</h1>
+            <h2>Developers</h2>
 
 			<table class="table table-striped table-hover">
 				<thead>
@@ -39,7 +41,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-7 col-sm-6">
-            <h1>Add a developer</h1>
+            <h2>Add a developer</h2>
 
 			<form th:action="@{/developers}" method="post" enctype="multipart/form-data" class="form-horizontal">
             	<fieldset>
@@ -70,7 +72,6 @@
             </form>
           </div>
         </div>
-      </div>
     </div>
 
 </body>
