--- a/src/main/resources/templates/skills.html
+++ b/src/main/resources/templates/skills.html
@@ -9,9 +9,11 @@
 <body>
 	<div class="container">
       <div class="page-header" id="banner">
+      <h1>Skills Management</h1>
+      </div>
         <div class="row">
           <div class="col-lg-8 col-md-7 col-sm-6">
-            <h1>Skills</h1>
+            <h2>Skills</h2>
 
 			<table class="table table-striped table-hover">
 				<thead>
@@ -35,7 +37,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-7 col-sm-6">
-            <h1>Add a skill</h1>
+            <h2>Add a skill</h2>
 
 			<form th:action="@{/skills}" method="post" enctype="multipart/form-data" class="form-horizontal">
             	<fieldset>
@@ -60,7 +62,7 @@
             </form>
           </div>
         </div>
-      </div>
+
     </div>
 
 </body>
