--- a/src/main/resources/templates/developer.html
+++ b/src/main/resources/templates/developer.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Developer</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="/bootstrap.min.css" media="screen"/>
+    <title>Developer</title>
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
+		href="../../css/bootstrap.min.css" />
 </head>
 <body>
 	<div class="container">
