--- a/src/main/resources/templates/developers.html
+++ b/src/main/resources/templates/developers.html
@@ -4,7 +4,8 @@
     <title>Developers database</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-	<link rel="stylesheet" href="/bootstrap.min.css" media="screen"/>
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
+		href="../../css/bootstrap.min.css" />
 </head>
 <body>
 	<div class="container">
