--- a/src/main/resources/templates/developers.html
+++ b/src/main/resources/templates/developers.html
@@ -6,12 +6,34 @@
 
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
 		href="../../css/bootstrap.min.css" />
+	<link rel="stylesheet" th:href="@{/css/developers.css}"
+		href="../../css/developers.css" />		
 </head>
 <body>
+	    <nav class="navbar navbar-inverse navbar-fixed-top">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="#">Developers Example</a>
+	        </div>
+	        <div id="navbar" class="collapse navbar-collapse">
+	          <ul class="nav navbar-nav">
+	            <li class="active"><a th:href="@{/}" href="home.html"> Home </a></li>
+	            <li><a th:href="@{/developers}" href="developers"> Developers </a></li>
+	            <li><a th:href="@{/skills}" href="skills"> Skills </a></li>
+	            <li><a th:href="@{/logout}" href="logout"> Logout </a></li>
+	            <li><a th:href="@{/login}" href="login"> Login </a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </nav>    
+    
 	<div class="container">
-      <div class="page-header" id="banner">
-      <h1>Developers Management</h1>
-      </div>
         <div class="row">
           <div class="col-lg-8 col-md-7 col-sm-6">
             <h2>Developers</h2>
