--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,29 +4,44 @@
 <title>Error</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
 	href="../../css/bootstrap.min.css" />
+<link rel="stylesheet" th:href="@{/css/developers.css}"
+	href="../../css/developers.css" />		
+	
 </head>
 <body>
-	<div class="container">
-		<div class="navbar">
-			<div class="navbar-inner">
-				<a class="brand" href="http://www.thymeleaf.org"> Thymeleaf -
-					Plain </a>
-				<ul class="nav">
-					<li><a th:href="@{/}" href="home.html"> Home </a></li>
-					<li><a th:href="@{/logout}" href="logout"> Logout </a></li>
-				</ul>
+	    <nav class="navbar navbar-inverse navbar-fixed-top">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="#">Developers Example</a>
+	        </div>
+	        <div id="navbar" class="collapse navbar-collapse">
+	          <ul class="nav navbar-nav">
+	            <li class="active"><a th:href="@{/}" href="home.html"> Home </a></li>
+	            <li><a th:href="@{/developers}" href="developers"> Developers </a></li>
+	            <li><a th:href="@{/skills}" href="skills"> Skills </a></li>
+	            <li><a th:href="@{/logout}" href="logout"> Logout </a></li>
+	            <li><a th:href="@{/login}" href="login"> Login </a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </nav>    
+    	<div class="container">    	
+			<h1 th:text="${title}">Error</h1>
+			<div id="created" th:text="${#dates.format(timestamp)}">July 11,
+				2012 2:17:16 PM CDT</div>
+			<div>
+				There was an unexpected error (type=<span th:text="${error}">Bad</span>, status=<span th:text="${status}">500</span>).
+			</div>
+			<div th:text="${message}">Fake content</div>
+			<div>
+				Please contact the operator with the above information.
 			</div>
 		</div>
-		<h1 th:text="${title}">Title</h1>
-		<div id="created" th:text="${#dates.format(timestamp)}">July 11,
-			2012 2:17:16 PM CDT</div>
-		<div>
-			There was an unexpected error (type=<span th:text="${error}">Bad</span>, status=<span th:text="${status}">500</span>).
-		</div>
-		<div th:text="${message}">Fake content</div>
-		<div>
-			Please contact the operator with the above information.
-		</div>
-	</div>
 </body>
 </html>
