--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,8 @@
         <title>Developers example</title>
 		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
 			href="../../css/bootstrap.min.css" />
+		<link rel="stylesheet" th:href="@{/css/developers.css}"
+			href="../../css/developers.css" />
     </head>
     <body>
 	    <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -20,13 +22,15 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#">Project name</a>
+	          <a class="navbar-brand" href="#">Developers Example</a>
 	        </div>
 	        <div id="navbar" class="collapse navbar-collapse">
 	          <ul class="nav navbar-nav">
-	            <li class="active"><a href="#">Home</a></li>
-	            <li><a href="#about">About</a></li>
-	            <li><a href="#contact">Contact</a></li>
+	            <li class="active"><a th:href="@{/}" href="home.html"> Home </a></li>
+	            <li><a th:href="@{/developers}" href="developers"> Developers </a></li>
+	            <li><a th:href="@{/skills}" href="skills"> Skills </a></li>
+	            <li><a th:href="@{/logout}" href="logout"> Logout </a></li>
+	            <li><a th:href="@{/login}" href="login"> Login </a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
