--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,18 +4,35 @@
 <title>Login</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
 	href="../../css/bootstrap.min.css" />
+<link rel="stylesheet" th:href="@{/css/developers.css}"
+	href="../../css/developers.css" />		
+	
 </head>
 <body onload="document.f.username.focus();">
+	    <nav class="navbar navbar-inverse navbar-fixed-top">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="#">Developers Example</a>
+	        </div>
+	        <div id="navbar" class="collapse navbar-collapse">
+	          <ul class="nav navbar-nav">
+	            <li class="active"><a th:href="@{/}" href="home.html"> Home </a></li>
+	            <li><a th:href="@{/developers}" href="developers"> Developers </a></li>
+	            <li><a th:href="@{/skills}" href="skills"> Skills </a></li>
+	            <li><a th:href="@{/logout}" href="logout"> Logout </a></li>
+	            <li><a th:href="@{/login}" href="login"> Login </a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </nav>  
+	    
 	<div class="container">
-		<div class="navbar">
-			<div class="navbar-inner">
-				<a class="brand" href="http://www.thymeleaf.org"> Thymeleaf -
-					Plain </a>
-				<ul class="nav">
-					<li><a th:href="@{/}" href="home.html"> Home </a></li>
-				</ul>
-			</div>
-		</div>
 		<div class="content">
 			<p th:if="${param.logout}" class="alert">You have been logged out</p>
 			<p th:if="${param.error}" class="alert alert-error">There was an error, please try again</p>
