--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,12 +2,46 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>Developers</title>
+        <meta charset="utf-8"/>
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+    	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+        <title>Developers example</title>
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"
+			href="../../css/bootstrap.min.css" />
+		<link rel="stylesheet" th:href="@{/css/developers.css}"
+			href="../../css/developers.css" />
     </head>
     <body>
-        <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
-        </form>
+	    <nav class="navbar navbar-inverse navbar-fixed-top">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="#">Developers Example</a>
+	        </div>
+	        <div id="navbar" class="collapse navbar-collapse">
+	          <ul class="nav navbar-nav">
+	            <li class="active"><a th:href="@{/}" href="home.html"> Home </a></li>
+	            <li><a th:href="@{/developers}" href="developers"> Developers </a></li>
+	            <li><a th:href="@{/skills}" href="skills"> Skills </a></li>
+	            <li><a th:href="@{/logout}" href="logout"> Logout </a></li>
+	            <li><a th:href="@{/login}" href="login"> Login </a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </nav>   
+	    
+	    <div class="container">    
+	        <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
+	        <form th:action="@{/logout}" method="post">
+	            <input type="submit" value="Sign Out"/>
+	        </form>
+        </div>
     </body>
 </html>
