--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -25,8 +25,8 @@
 	            <li class="active"><a th:href="@{/}" href="home.html"> Home </a></li>
 	            <li><a th:href="@{/developers}" href="developers"> Developers </a></li>
 	            <li><a th:href="@{/skills}" href="skills"> Skills </a></li>
-	            <li><a th:href="@{/logout}" href="logout"> Logout </a></li>
-	            <li><a th:href="@{/login}" href="login"> Login </a></li>
+	            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}" href="logout"> Logout </a></li>
+	            <li sec:authorize="isAnonymous()"><a th:href="@{/login}" href="login"> Login </a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
