--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,9 +28,10 @@
 	          <ul class="nav navbar-nav">
 	            <li class="active"><a th:href="@{/}" href="home.html"> Home </a></li>
 	            <li><a th:href="@{/developers}" href="developers"> Developers </a></li>
-	            <li><a th:href="@{/skills}" href="skills"> Skills </a></li>
-	            <li><a th:href="@{/logout}" href="logout"> Logout </a></li>
-	            <li><a th:href="@{/login}" href="login"> Login </a></li>
+	            <li th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"><a th:href="@{/skills}" href="skills"> Skills </a></li>
+	            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}" href="logout"> Logout </a></li>
+	            <li sec:authorize="isAnonymous()"><a th:href="@{/login}" href="login"> Login </a></li>
+		        <li sec:authorize="isAuthenticated()"><a th:href="@{/profile}" href="profile" th:text="${#authentication.name}">"name"</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
