--- a/src/main/resources/templates/access.html
+++ b/src/main/resources/templates/access.html
@@ -6,17 +6,9 @@
 	href="../../css/bootstrap.min.css" />
 </head>
 <body>
+	<div th:replace="menu :: nav"></div>
+
 	<div class="container">
-		<div class="navbar">
-			<div class="navbar-inner">
-				<a class="brand" href="http://www.thymeleaf.org"> Thymeleaf -
-					Plain </a>
-				<ul class="nav">
-					<li><a th:href="@{/}" href="home.html"> Home </a></li>
-					<li><a th:href="@{/logout}" href="logout"> Logout </a></li>
-				</ul>
-			</div>
-		</div>
 		<h1 th:text="${title}">Title</h1>
 		<p class="alert alert-error">Access denied:
 			you do not have permission for that resource</p>
