--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,28 +14,7 @@
 			href="../../css/developers.css" />
     </head>
     <body>
-	    <nav class="navbar navbar-inverse navbar-fixed-top">
-	      <div class="container">
-	        <div class="navbar-header">
-	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-	            <span class="sr-only">Toggle navigation</span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	          </button>
-	          <a class="navbar-brand" href="#">Developers Example</a>
-	        </div>
-	        <div id="navbar" class="collapse navbar-collapse">
-	          <ul class="nav navbar-nav">
-	            <li class="active"><a th:href="@{/}" href="home.html"> Home </a></li>
-	            <li><a th:href="@{/developers}" href="developers"> Developers </a></li>
-	            <li><a th:href="@{/skills}" href="skills"> Skills </a></li>
-	            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}" href="logout"> Logout </a></li>
-	            <li sec:authorize="isAnonymous()"><a th:href="@{/login}" href="login"> Login </a></li>
-	          </ul>
-	        </div><!--/.nav-collapse -->
-	      </div>
-	    </nav>   
+		<div th:replace="menu :: nav"></div>
 	    
 	    <div class="container">    
 	        <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
